# parser-xml2json

./: .gitignore  Cargo.toml  README.md  package.json
benchmark/: index.js  package.json
lib/: index.js
native/: Cargo.toml  artifacts.json  index.node
native/src/: lib.rs
src/: embed.rs
test/: parse-file.js  parse-string.js
test/fixture/: invalid-sample.xml  sample.xml
